--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 # Site wide configuration
 
 title: "Nurvirta Monarizqa"
-description: "This is a description of my awesome site."
+description: "Mona's Technical Blog."
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
-url:
+url: https://nmonarizqa.github.io
+url: http://localhost:4000
 feed:
   path: atom.xml
 
@@ -26,19 +27,20 @@ gems:
 
 # Site owner
 owner:
-  name:
-  email:
-  twitter:
+  name: "Nurvirta Monarizqa"
+  email: "nmonarizqa@windowslive.com"
+  twitter: "nmonarizqa"
   google:
     ad-client:
     ad-slot:
-  bio:
+  bio: "MS Candidate at CUSP New York University"
   avatar: bio-photo.jpg # 160x160 px image for author byline
   disqus-shortname:
 
 
 include:
   - .htaccess
+  - ["_pages"]
 exclude:
   - "*.less"
   - "*.sublime-project"
