--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,7 @@
 # Footer navigation links
 
-- title:
-  url:
+- title: LinkedIn
+  url: https://www.linkedin.com/in/nmonarizqa
+
+- title: Medium
+  url: http://www.medium.com/@nmonarizqa
