--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ description: "Mona's Technical Blog."
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
-url: https://nmonarizqa.github.io
-url: http://localhost:4000
+url: 
 feed:
   path: atom.xml
 
