--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ owner:
   google:
     ad-client:
     ad-slot:
-  bio: "MS Candidate at CUSP New York University"
+  bio: "MS Candidate at Center for Urban Science + Progress, New York University"
   avatar: bio-photo.jpg # 160x160 px image for author byline
   disqus-shortname:
 
