update config and index

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skinny-bones-jekyll",
+  "name": "jekyll-theme-skinny-bones",
   "version": "1.0.0",
   "private": true,
   "description": "A Jekyll starter site",
